--- a/zernovarka/scss/layout/_header.scss
+++ b/zernovarka/scss/layout/_header.scss
@@ -68,7 +68,7 @@ header{
 	}
 	&__bott{
 		background: #59514c;
-		padding: 7.5px 0;
+		/*padding: 7.5px 0;*/
 	}
 	&__bottnav{
 		ul{
@@ -78,24 +78,22 @@ header{
 			}
 			li{
 				margin-right: 40px;
+				position: relative;
 				&:last-child{
 					margin-right: 0;
 				}
 				a{
-					font: 500 12px/45px 'Roboto';
+					font: 500 12px/60px 'Roboto';
 					color: #59514c;
 					letter-spacing: 0.06em;
 					color: #fff;
 					position: relative;
-					&:hover{
-						color: #f8b30e;
-					}
 					&.active{
 						&::after{
 							content: url(../img/y-arrow.png);
 							position: absolute;
 							right: -12px;
-    						top: -15px;
+    						top: -23px;
 							filter: brightness(0) invert(100%);
 							/*transition: filter 0.2s;*/
 						}
@@ -105,6 +103,14 @@ header{
 							}
 						}
 					}	
+				}
+				&:hover{
+					a{
+						color: #f8b30e;
+					}
+					.dropdown{
+						display: flex !important;
+					}
 				}
 			}
 		}
@@ -183,6 +189,107 @@ header{
 		}
 	}
 }
+.dropdown{
+	position: absolute;
+	left: 0;
+	top: 60px;
+	background: #fff;
+	padding: 45px 0;
+	width: 600px;
+	display: none !important;
+    box-shadow: 0px 3px 35px 0px rgba(46, 46, 46, 0.09);
+	ul{
+		width: 300px;
+		border-right: 1px solid #e8e8e8;
+		padding-left: 60px;
+		&:last-child{
+			border-right: 0;
+		}
+		li{
+			a{
+				color: #59514c !important;
+				font: 400 12px/32px 'Roboto';
+				letter-spacing: 0;
+				&:hover{
+					color: #f8b30e !important;
+				}
+			}
+		}
+	}
+	&__left{
+		width: 300px;
+		border-right: 1px solid #e8e8e8;
+		padding-left: 80px;
+		&_2{
+			width: 260px;
+			padding-left: 50px;
+		}
+		h2{
+			color: #f9b30e;
+			font: 500 18px 'Roboto';
+			margin-bottom: 15px;
+			&.title2{
+				margin-top: 35px;
+			}
+		}
+		a{
+			color: #59514c !important;
+			font: 400 12px/17px 'Roboto' !important;
+			margin-bottom: 20px;
+			display: block;
+			cursor: pointer;
+			&:last-child{
+				margin-bottom: 0;
+			}
+			&:hover{
+				color: #f8b30e !important;
+			}
+		}
+		&_2{
+			a{
+				margin-bottom: 8px;
+			}
+		}		
+	}
+	&__right{
+		width: 300px;
+		padding-left: 95px;
+		&_2{
+			width: 340px;
+			padding-left: 95px;
+		}
+		h2{
+			color: #f9b30e;
+			font: 500 18px 'Roboto';
+			margin-bottom: 20px;
+			&.title3{
+				margin-top: 25px;
+			}
+		}
+		a{
+			color: #59514c !important;
+			font: 400 12px/17px 'Roboto' !important;
+			margin-bottom: 15px;
+			display: block;
+			cursor: pointer;
+			&:last-child{
+				margin-bottom: 0;
+			}
+			&:hover{
+				color: #f8b30e !important;
+			}
+		}
+		&_2{
+			a{
+				margin-bottom: 8px;
+			}
+		}
+	}
+	&__box{
+		width: 70px;
+		display: inline-block;
+	}
+}
 .currency{
 	margin-left: 12px;
 	padding-top: 3px;
@@ -257,6 +364,9 @@ header{
 			}
 		}
 	}
+	.dropdown{
+		display: none !important;
+	}
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
@@ -298,6 +408,9 @@ header{
 	}
 	.info{
 		margin-right: 0;
+	}
+	.dropdown{
+		display: none !important;
 	}
 }
 
@@ -401,5 +514,8 @@ header{
     	&__icon{
     		display: none !important;
     	}
+	}
+	.dropdown{
+		display: none !important;
 	}
 }
