--- a/zernovarka/scss/layout/_footer.scss
+++ b/zernovarka/scss/layout/_footer.scss
@@ -152,6 +152,7 @@ footer{
 			display: flex;
 			justify-content: space-between;
 			align-items: flex-start;
+			flex-wrap: wrap;
 			width: 100%;
 			max-width: 300px;
 		}
